# jc3vrs

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  shell.nix
.cargo/: config.toml
.github/workflows/: rust.yml
.polytoken/skills/jc3-reverse-engineering/: SKILL.md
.polytoken/skills/wine-debug/: SKILL.md
.polytoken/skills/wine-debug/scripts/: stackscan.py
docs/: README.md  aim-pipeline.md  controllers-and-roomscale.md  environment.md  fsr.md  grapple-pipeline.md  hands-and-roomscale.md  head-and-body.md  hud.md  input.md  issue-08-14-hud-overlays-and-depth.md  issue-15-enclosed-vehicles.md  issue-19-headless-shadow.md  issue-20-animation-judder.md  render-setups-reinit.md  rendering.md  roadmap.md  shaders.md  skeleton.md  vr-runtime.md
docs/engine/: aim-pipeline.md  grapple-pipeline.md  hands-and-roomscale.md  humanik.md  input.md  lighting-shadow-pipeline.md  model-culling.md  profiling.md  render-setups-reinit.md  rendering.md  shaders.md  skeleton.md
docs/issues/: 08-14-hud-overlays-and-depth.md  20-animation-judder.md  32-monoscopic-far-field.md  40-terrain-black-tiles.md
docs/mod/: controllers-and-roomscale.md  environment.md  far-field.md  foveation.md  fsr.md  grapple-comfort.md  head-and-body.md  hud.md  input.md  lighting-shadow-vr-interactions.md  profiler.md  vr-runtime.md
fsr-shadergen/: Cargo.toml
fsr-shadergen/src/: main.rs  wine.rs
fsr-sys/: Cargo.toml  README.md  build.rs
fsr-sys/shim/: fsr_shim.cpp  fsr_shim.h
fsr-sys/src/: lib.rs
injector/: Cargo.toml
injector/src/: main.rs
jc3gi/: Cargo.toml  build.rs
jc3gi/src/: blackboard.rs  clock.rs  cpu_fragment.rs  cpu_profiler.rs  environment.rs  event.rs  game.rs  game_world_object_manager.rs  hash.rs  lib.rs  patch_system.rs  spawn_system.rs  state.rs  window.rs
jc3gi/src/aim/: aim.rs  mod.rs
jc3gi/src/animation/: ik.rs  mod.rs  rule_system.rs  symbol_table.rs
jc3gi/src/audio/: mod.rs  sound_library.rs
jc3gi/src/camera/: camera.rs  camera_context.rs  camera_manager.rs  camera_tree.rs  game_camera_manager.rs  input_to_orbit.rs  mod.rs
jc3gi/src/character/: character.rs  inventory.rs  mod.rs
jc3gi/src/equipment/: grappling_hook.rs  mod.rs
jc3gi/src/graphics_engine/: camera.rs  camera_manager.rs  device.rs  draw.rs  enums.rs  gi.rs  graphics_engine.rs  light_manager.rs  mod.rs  post_effects.rs  render_block.rs  render_engine.rs  render_pass.rs  shadow_manager.rs  ssao.rs  texture.rs  tone_mapping.rs
jc3gi/src/input/: input_action_map.rs  input_device_manager.rs  locomotion.rs  mod.rs
jc3gi/src/types/: math.rs  mod.rs  shared_ptr.rs  std_string.rs  std_vector.rs  vector_math.rs
jc3gi/src/ui/: mod.rs  overlay_ui.rs  scaleform.rs  ui_manager.rs
jc3gi/types/: clock.pyxis  game.pyxis  hash.pyxis
jc3gi/types/camera/: game_camera_manager.pyxis
jc3gi/types/character/: character.pyxis
jc3gi/types/graphics_engine/: camera.pyxis  camera_manager.pyxis  device.pyxis  graphics_engine.pyxis  texture.pyxis
jc3gi/types/input/: input_device_manager.pyxis
payload/: Cargo.toml  build.rs
payload/src/: allocator.rs  config.rs  crash.rs  egui_impl.rs  environment_ui.rs  far_field.rs  fsr.rs  lib.rs  lifecycle.rs  logging.rs  module.rs  stereo.rs  trace.rs  util.rs
payload/src/capture/: composite.rs  mod.rs  window.rs
payload/src/debug/: camera.rs  coord_frame.rs  mod.rs  rt_hash.rs  stereo_diff.rs  trace.rs
payload/src/far_field/: mod.rs  share.rs
payload/src/fsr/: mod.rs  velocity_decode.rs
payload/src/grapple/: config.rs  mod.rs  telemetry.rs
payload/src/headpose/: config.rs  mod.rs  sim.rs  xr.rs
payload/src/headpose/sim/: tests.rs
payload/src/hooks/: animation.rs  camera.rs  character.rs  clock.rs  draw_count.rs  game.rs  graphics.rs  mod.rs  post_effects.rs  profiler.rs  reset.rs  stereo.rs  ui.rs  wndproc.rs
payload/src/hooks/graphics_engine/: clustered_lighting.rs  culling.rs  graphics_engine.rs  mod.rs  post_effects.rs  reconstruction.rs  render_block.rs  render_pass.rs  resolution.rs  shader.rs  ssao.rs  terrain.rs  tone_mapping.rs
payload/src/hooks/input/: locomotion.rs  look.rs  mod.rs
payload/src/hud/: aim.rs  binding.rs  config.rs  cursor.rs  depth.rs  depth_probe.rs  egui_panel.rs  markers.rs  mirror_overlay.rs  mod.rs  pointer.rs  quad.rs  roots.rs  scaleform.rs  split.rs  state.rs  target.rs  warp.rs
payload/src/hud/split/: mod.rs  roots.rs
payload/src/profiler/: capture.rs  chrome_trace.rs  gpu.rs  mod.rs  ui.rs
payload/src/shaders/: capture_ps.dxbc  capture_ps.hlsl  capture_vs.dxbc  capture_vs.hlsl  cursor_ps.dxbc  cursor_ps.hlsl  depth_histogram_cs.dxbc  depth_histogram_cs.hlsl  far_field_composite_ps.dxbc  far_field_composite_ps.hlsl  foveation_fill_ps.dxbc  foveation_fill_ps.hlsl  foveation_mask_ps.dxbc  foveation_mask_ps.hlsl  hud_layer_vs.dxbc  hud_layer_vs.hlsl  hud_quad_ps.dxbc  hud_quad_ps.hlsl  hud_quad_vs.dxbc  hud_quad_vs.hlsl  velocity_decode.dxbc  velocity_decode.hlsl  vr_blit_ps.dxbc  vr_blit_ps.hlsl
payload/src/ui/: camera.rs  debug.rs  diagnostics.rs  environment.rs  game.rs  hud.rs  mod.rs  performance.rs  previews.rs  render.rs  util.rs  vr.rs
payload/src/vr/: blit.rs  config.rs  foveation.rs  frame.rs  mirror.rs  mod.rs  projection.rs  resolution.rs  tail.rs
scripts/: proton_run.sh  run.ps1  vr_launch.sh  xwin_build.sh  xwin_clippy.sh  xwin_run.sh
shadergen/: Cargo.toml
shadergen/src/: main.rs
tools/: analyze_profile.py  analyze_trace_frames.py
tools/scaleform-gfx-examine/: Cargo.toml
tools/scaleform-gfx-examine/src/: gfx.rs  main.rs  tags.rs
tools/shaders/: .gitignore  README.md  disasm.c  disasm.sh  extract_dxbc.py
