[package]
name = "fsr-shadergen"
version = "0.1.0"
edition = "2024"
description = "Regenerates the FSR2 DX11 shader-permutation headers consumed by fsr-sys. Run only on an FSR version bump or a fresh checkout; kept separate so its HTTP/archive deps never reach fsr-sys or the payload."
publish = false

[dependencies]
ureq = "3"
sevenz-rust2 = "0.21"
