[package]
name = "jc3vrs_payload"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { workspace = true }
re-utilities = { workspace = true }
detours-macro = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

jc3gi = { path = "../jc3gi" }
egui-directx11 = "0.11.0"
egui = "0.32"
anyhow.workspace = true
parking_lot = "0.12.5"
