[package]
name = "jc3vrs_payload"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { workspace = true }
re-utilities = { workspace = true }
detours-macro = { workspace = true }
glam = { workspace = true }

jc3gi = { path = "../jc3gi" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# egui-directx11 = "0.11.0"
egui-directx11 = { git = "https://github.com/ferrobrew/egui-directx11.git", branch = "user-texture-support" }
# egui-directx11 = { path = "../../egui-directx11" }
egui = "0.33"
anyhow.workspace = true
parking_lot = "0.12.5"
clipboard-win = "5.4.1"
