[package]
name = "jc3vrs_payload"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["profiler"]
# The in-game profiler (issue #34): puffin scopes across the mod's hooks and the engine's frame
# phases, a flame-graph panel in the Performance tab, and on-demand trace capture to disk.
# Compile-time so the extra hooks and per-scope overhead vanish entirely when disabled.
profiler = ["dep:puffin", "dep:puffin_egui"]

[dependencies]
windows = { workspace = true }
re-utilities = { workspace = true }
detours-macro = { workspace = true }
glam = { workspace = true }

jc3gi = { path = "../jc3gi" }
fsr-sys = { path = "../fsr-sys" }
# Runtime-loaded (`loaded` default feature): the OpenXR loader is opened at runtime via
# `xr::Entry::load_from`, not linked. The `static` loader (build the loader through cmake against the
# xwin/clang-cl cross toolchain) does not build here -- cmake requires Ninja, which the cross
# environment lacks -- so the dynamic route is the portable choice. See `vr` module docs.
openxr = "0.21"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
egui-directx11 = "0.13"
# egui-directx11 = { path = "../../egui-directx11" }
egui = "0.35"
# Git rather than crates.io: the released puffin_egui 0.30 pins egui 0.33, while upstream main has
# moved to egui 0.35 (unreleased at the time of writing). Both crates ride the same rev so they
# agree on the puffin data model.
puffin = { git = "https://github.com/EmbarkStudios/puffin", rev = "d06bed0fcb8c8e4c78643d4ead7cf1de9b76fd3b", optional = true }
puffin_egui = { git = "https://github.com/EmbarkStudios/puffin", rev = "d06bed0fcb8c8e4c78643d4ead7cf1de9b76fd3b", optional = true }
anyhow.workspace = true
# `send_guard`: the VR frame context carries the runtime lock's guard for the frame, and the
# deferred frame tail hands that context to the tail thread to submit.
parking_lot = { version = "0.12.5", features = ["send_guard"] }
clipboard-win = "5.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jiff = "0.2.29"
# PNG-only: the render-trace screenshot diagnostic encodes eye-0 frames; no other formats needed.
image = { version = "0.25", default-features = false, features = ["png"] }
egui_dock = { version = "0.20", features = ["serde"] }

[build-dependencies]
jiff = "0.2.29"
